<resources>
    <string name="app_name">乐 山</string>
    <string name="textview_braised_chicken">主要食材是鸡腿肉，配以青椒、土豆、香菇等焖制而成，味道美妙，具有肉质鲜美嫩滑的特点</string>
    <string name="textview_intro">"   乐山，四川省辖地级市，古称嘉州，有“海棠香国”的美誉。
        \n\n   乐山位于四川省中部，四川盆地的西南部，地势西南高，东北低，属中亚热带气候带。
        \n\n   乐山是四川省重要工业城市、成都经济区南部区域中心城市、重要枢纽城市、成渝城市群重要交通节点和港口城市。成昆铁路、成贵高铁贯穿全境。
        \n\n   乐山三江汇合。大渡河，青衣江在乐山大佛脚下汇入岷江。
      \n\n   乐山是国家历史文化名城，国家首批对外开放城市、全国绿化模范城市、中国优秀旅游城市、国家园林城市、全国卫生城市。
        \n\n   乐山有世界级遗产三处—世界自然与文化遗产峨眉山和乐山大佛、世界灌溉工程遗产东风堰，国家4A级景区以上景区15处，国家A级景区35处。
        \n\n   截至2018年底，乐山市辖4区6县，代管1个县级市，总面积12720.03平方公里。2018年底户籍人口350.68万人，常住人口326.7万。2019年，乐山市地区生产总值（GDP）1863.31亿元。"</string>
    <string name="textview_sceondtitle">乐山乐水，好自在</string>
    <string name="food">美食</string>
    <string name="travle">旅游</string>
    <string name="saoMai_Intro">   烧麦，又称烧卖、肖米、稍麦、稍梅、烧梅、鬼蓬头，在日本称作焼売，是形容顶端蓬松束折如花的形状，是一种以烫面为皮裹馅上笼蒸熟的小吃。形如石榴，洁白晶莹，馅多皮薄，清香可口</string>
    <string name="tianPiYa_Intro">   甜皮鸭，又称卤鸭子，也叫甜皮卤鸭，沿用的是清朝御膳工艺。由民间发掘、改进，其卤水别具特色。具有色泽棕红、皮酥略甜、肉质细嫩、香气宜人的特点。</string>
    <string name="maLaTang_Intro">  麻辣烫起源于岷江之滨四川省乐山市牛华镇。最初是船工和纤夫创造了麻辣烫这种简便易行而又独特的吃法。从成都到三峡的川江流域，由于水流湍急，纤夫成了必不可少的风景</string>
    <string name="douFuNao_Intro">  豆腐脑一道著名的传统特色小吃，是利用大豆蛋白制成的高营养食品，多在晨间出售，常与豆腐花、豆花混用，依据各地口味不同，北方多爱咸食，而南方则偏爱甜味，亦有地区如四川等喜爱酸辣口味</string>
    <string name="huangMengJI_Intro">  黄焖鸡米饭又叫香鸡煲、浓汁鸡煲饭，属于鲁菜系家常菜品，起源于山东省济南市。主要食材是鸡腿肉，配以青椒、土豆、香菇等焖制而成，味道美妙，具有肉质鲜美嫩滑的特点</string>
    <string name="intro_ems">  梵净山巍峨庞大，拔地通天，集石、树、云、风之极致，具天下名岳之特奇，方圆八百里净土， \n\n   贵州梵净山金顶风光 贵州梵净山金顶风光(20张) 莽林幽壑，人迹罕至，群峰耸峙，气象万千。早在明代，梵净山就开辟成为古佛道场，佛山一体，驰名全国，因此《铜仁府志》称它“不独为黔中之胜概，亦宇内壮观”。近一个多世纪以来，此山即以它的深藏厚蕴和灵异怪谲，引起域中海外的关注。在大自然日益遭到破坏的当今，梵净山仍以其原始、完整、平衡而自成体系的生态系统及千姿百态、峥嵘奇伟的山岳冰川融冻地貌，成为地球上一处绝妙无比的风景旅游圣地。梵净山巍峨庞大，拔地通天，集石、树、云、风之极致，具天下名岳之特奇，方圆八百里净土， 贵州梵净山金顶风光 贵州梵净山金顶风光(20张) 莽林幽壑，人迹罕至，群峰耸峙，气象万千。早在明代，梵净山就开辟成为古佛道场，佛山一体，驰名全国，因此《铜仁府志》称它“不独为黔中之胜概，亦宇内壮观”。近一个多世纪以来，此山即以它的深藏厚蕴和灵异怪谲，引起域中海外的关注。在大自然日益遭到破坏的当今，梵净山仍以其原始、完整、平衡而自成体系的生态系统及千姿百态、峥嵘奇伟的山岳冰川融冻地貌，成为地球上一处绝妙无比的风景旅游圣地。</string>
    <!--旅游-->
    <string-array name="Title">
        <item>金顶</item>
        <item>报国寺</item>
        <item>秀甲天下</item>
        <item>滑雪场</item>
    </string-array>
    <string-array name="address">
        <item>四川,乐山市,峨眉山市,峨眉山景区,景点金顶</item>
        <item>四川,乐山市,峨眉山市,峨眉山景区,景点报国寺</item>
        <item>四川,乐山市,峨眉山市,峨眉山景区,景点秀甲天下</item>
        <item>四川,乐山市,峨眉山市,峨眉山景区,景点滑雪场</item>
    </string-array>
    <string-array name="subtitle">
        <item>日出、云海、佛光、圣灯没得不可一发</item>
        <item>烧香拜佛，请求神明保佑</item>
        <item>日出、云海、佛光、圣灯没得不可一发</item>
        <item>日出、云海、佛光、圣灯没得不可一发</item>
    </string-array>
    <string-array name="imageResouce">
        <item>@drawable/jingding</item>
        <item>@drawable/baoguosi</item>
        <item>@drawable/xiujiatianxia</item>
        <item>@drawable/huaxuechang</item>
    </string-array>


    <!--    美食-->
    <string-array name="Title_food">
        <item>豆腐脑</item>
        <item>甜皮鸭</item>
        <item>黄焖鸡</item>
        <item>麻辣烫</item>
    </string-array>
    <string-array name="subtitle_food">
        <item>吃饱肚子才有力气减肥！！！</item>
        <item>日出、云海、佛光、圣灯没得不可一发</item>
        <item>日出、云海、佛光、圣灯没得不可一发</item>
        <item>日出、云海、佛光、圣灯没得不可一发</item>
    </string-array>
    <string-array name="imageResouce_food">
        <item>@drawable/doufunao</item>
        <item>@drawable/tianpiya</item>
        <item>@drawable/huangmengji</item>
        <item>@drawable/malatang</item>
    </string-array>
    <!--    美食详细-->
    <!--    豆腐脑-->
    <string-array name="contetn_Food_Detial_dfn_Item">
        <item>搅三搅^12^乐山市峨眉山市东门路搅三搅豆腐脑^9:00-20:30^15182289532</item>
        <item>东门豆腐脑^12^乐山市峨眉山市东门路东门豆腐脑^9:00-20:30^15182289532</item>
        <item>豆豆豆腐脑^15^乐山市市中区鹤翔路23号^10:00-22:00^15182289532</item>
        <item>玖佲豆腐脑^15^乐山市市中区张公桥街84号^08:00-22:00^15182289532</item>

    </string-array>
    <string-array name="image_Food_Detial_dfn_Iteam">
        <item>@drawable/jiaoshanjiao_dfn</item>
        <item>@drawable/goaji_dfn</item>
        <item>@drawable/doudou_dfn</item>
        <item>@drawable/jiuming_dfn</item>
    </string-array>
    <!--    甜皮鸭-->
    <string-array name="contetn_Food_Detial_tpy_Item">
        <item>赵鸭子甜皮鸭^33^乐山市市中区春华路西段568号赵鸭子^9:00-19：00^15182289532</item>
        <item>纪六孃^35^乐山市市中区鹤翔路319号^8:00-20:30^15182289532</item>
        <item>李四孃^36^乐山市市中区张公桥65号^8:00-20:30^15182289532</item>
        <item>吴陆～吴鸭子^19^乐山市市中区鹤翔路^9:00-19:00^15182289532</item>
    </string-array>
    <string-array name="image_Food_Detial_tpy_Iteam">
        <item>@drawable/zaosiliang</item>
        <item>@drawable/jiliuliang</item>
        <item>@drawable/lisiliang</item>
        <item>@drawable/wuyazi</item>
    </string-array>
    <!--    黄闷鸡-->
    <string-array name="contetn_Food_Detial_hmj_Item">
        <item>开口笑芋儿烧鸡^35^乐山市市中区王浩儿街212号^0：00-20:30^15182289532</item>
        <item>云顶酒楼^75^乐山市市中区嘉定中路151号对面^17:30-  20:30^15182289532</item>
    </string-array>
    <string-array name="image_Food_Detial_hmj_Iteam">
        <item>@drawable/kaikouxiao_yesj</item>
        <item>@drawable/yunding_jl</item>
    </string-array>
    <!--    麻辣烫-->
    <string-array name="contetn_Food_Detial_mlt_Item">
        <item>牛华•二毛麻辣烫^31^乐山市市中区306省道长青路35号^11：30-23：30^12:30-00：00^15182289532</item>
        <item>牛华佳园麻辣烫^31^乐山市市中区四方街121号^16：00-01：00^15182289532</item>
        <item>嘉州飘香麻辣烫^44^乐山市市中区张公桥43-35号^12：00-00：00^15182289532</item>
        <item>嘉州飘香麻辣烫^50^乐山市市中区雪杉街613号^12：00-00：00^15182289532</item>
    </string-array>
    <string-array name="image_Food_Detial_mlt_Iteam">
        <item>@drawable/ermao_mlt</item>
        <item>@drawable/jiayuan_mlt</item>
        <item>@drawable/jiazhou_mlt</item>
        <item>@drawable/jiazhoupx_mlt</item>
    </string-array>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">主页</string>
    <string name="menu_personla_center">个人中心</string>
    <string name="menu_slideshow">消息流</string>
    <string name="company">CopyRight@ 2020 乐山旅游 All right reseved \n\n乐山旅游app科技有限公司</string>
    <string-array name="item_message">
        <item>今日特价商品-黄焖鸡｜大喇叭,听说XX做了一个超大活动，9.9元即可领回家!名额有限，快来参加吧! </item>
        <item>今日特价商品-黄焖鸡｜大喇叭,听说XX做了一个超大活动，9.9元即可领回家!名额有限，快来参加吧! </item>
        <item>今日特价商品-黄焖鸡｜大喇叭,听说XX做了一个超大活动，9.9元即可领回家!名额有限，快来参加吧! </item>
        <item>今日特价商品-黄焖鸡｜大喇叭,听说XX做了一个超大活动，9.9元即可领回家!名额有限，快来参加吧! </item>
    </string-array>
</resources>