<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.mahao.leshan.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_personal_center"
        android:name="com.mahao.leshan.ui.personal.PersonalCenterFragment"
        android:label="@string/menu_personla_center"
        tools:layout="@layout/fragment_personal_center" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.mahao.leshan.ui.message.MessageCenter"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>