<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Food">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image_saomai"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/imgb" />

                <TextView
                    android:id="@+id/text_saomai"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/text_endMargin"
                    android:layout_weight="1"
                    android:fontFamily="@font/light"
                    android:gravity="center"
                    android:padding="@dimen/text_padding"
                    android:text="@string/saoMai_Intro" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image_doufunao"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/doufunao" />

                <TextView
                    android:id="@+id/text_doufunao"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/text_endMargin"
                    android:layout_weight="1"
                    android:fontFamily="@font/light"
                    android:gravity="center"
                    android:padding="@dimen/padding_rualr"
                    android:text="@string/douFuNao_Intro" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image_tianPiYa"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/tianpiya" />

                <TextView
                    android:id="@+id/text_tianPiYa"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/text_endMargin"
                    android:layout_weight="1"
                    android:fontFamily="@font/light"
                    android:gravity="center"
                    android:padding="@dimen/padding_rualr"
                    android:text="@string/tianPiYa_Intro" />
            </LinearLayout>
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image_maLaTang"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/malatang" />

                <TextView
                    android:id="@+id/text_maLaTang"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/text_endMargin"
                    android:layout_weight="1"
                    android:fontFamily="@font/light"
                    android:gravity="center"
                    android:padding="@dimen/padding_rualr"
                    android:text="@string/maLaTang_Intro" />
        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image_huangMengJi"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/huangmengji" />

                <TextView
                    android:id="@+id/text_huangMengJi"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/text_endMargin"
                    android:layout_weight="1"
                    android:fontFamily="@font/light"
                    android:gravity="center"
                    android:padding="@dimen/padding_rualr"
                    android:text="@string/huangMengJI_Intro" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>